@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-09-11T08:00:29Z",
+  "timestamp" : "2022-09-12T16:08:25Z",
   "count_outdated" : 53,
   "uniques_outdated" : 44,
-  "count" : 77,
-  "uniques" : 64,
+  "count" : 73,
+  "uniques" : 61,
   "clones" : [
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "uniques": 7,
-      "uniques_minmax": [ 7, 7 ]
+      "count": 5,
+      "count_minmax": [ 5, 9 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 7 ]
     },
     {
       "timestamp": "2022-08-30T00:00:00Z",
