@@ -1,11 +1,11 @@
 {
-  "count": 24,
-  "uniques": 13,
+  "count": 20,
+  "uniques": 10,
   "clones": [
     {
       "timestamp": "2022-08-29T00:00:00Z",
-      "count": 9,
-      "uniques": 7
+      "count": 5,
+      "uniques": 4
     },
     {
       "timestamp": "2022-08-30T00:00:00Z",
