@@ -1,3 +1,11 @@
+2022-09-12T16:08:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038819450
+* notice: last 14d: unq all: 10 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 44 53 / 64 77
+* notice: next accum: outdated-unq outdated-all / unq all: 44 53 / 61 73
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +7 +9 -3 -4 / 4 5
+* notice: removed / changed dates: [] / [2022-08-29]
+
 2022-09-11T08:00:29Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031042832
 * notice: last 14d: unq all: 13 24
